# ParaILP

./: CMakeLists.txt  readme.md
code/: Master.cpp  Master.hpp
code/share/: ModelCon.cpp  ModelCon.h  ModelVar.cpp  ModelVar.h  Population.cpp  Population.h
code/solvers/: LocalCon.cpp  LocalCon.h  LocalVar.cpp  LocalVar.h  local_ilp.cpp  local_ilp.h
code/utils/: header.h  paras.h  parse.cpp  utils.cpp
code/workers/: Worker.cpp  Worker.h
result/: result.csv
